[gd_scene load_steps=24 format=3 uid="uid://w8t4c7kwo1sm"]

[ext_resource type="Script" path="res://Enemy/Boss.gd" id="1_362wq"]
[ext_resource type="ArrayMesh" uid="uid://dulhc1ccewf7d" path="res://Enemy/Human/Leg.obj" id="2_dwrf0"]
[ext_resource type="ArrayMesh" uid="uid://buk324fdl5r7j" path="res://Enemy/Human/Torse.obj" id="3_6bwvd"]
[ext_resource type="ArrayMesh" uid="uid://d2fkogpgqfp55" path="res://Enemy/Human/Rig.obj" id="4_7mulb"]
[ext_resource type="Texture2D" uid="uid://54pj0p0l001u" path="res://Shootgun/UVmaps.png" id="5_yrfkk"]
[ext_resource type="ArrayMesh" uid="uid://dcoawpl2t7jw1" path="res://Shootgun/Shotgun.obj" id="6_4kakk"]
[ext_resource type="AudioStream" uid="uid://c1op4ktiy04gb" path="res://Sound/Drobovik.ogg" id="7_3iyv3"]
[ext_resource type="PackedScene" uid="uid://cutbfveynld5j" path="res://LazerGun/LaserGun.tscn" id="8_kmja4"]
[ext_resource type="AudioStream" uid="uid://shqlu5ep2qjf" path="res://PistolShoot.wav" id="9_v448x"]
[ext_resource type="ArrayMesh" uid="uid://s1fqu5dugt3m" path="res://Pistol/Sword/sword.obj" id="10_qdfx3"]
[ext_resource type="AudioStream" uid="uid://i8yqx8eg6nw" path="res://Sound/sword.ogg" id="11_oi3dq"]
[ext_resource type="AudioStream" uid="uid://frpgogg5x0ht" path="res://Sound/VoiceBro1.ogg" id="12_r8pbr"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_d21ya"]

[sub_resource type="PrismMesh" id="PrismMesh_hljx8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mhx8n"]
size = Vector3(1, 4.63254, 1)

[sub_resource type="Animation" id="Animation_2a46d"]
resource_name = "Stand"

[sub_resource type="Animation" id="Animation_j5kcp"]
resource_name = "Walk"
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Legf")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 1, 0, 0.3, 1, 0, -0.259, 0.966, 0, 0.7, 1, 0, 0.259, 0.966, 0, 1, 1, 0, 0, 1, 0)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Legf2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 1, 0, 0.3, 1, 0, 0.259, 0.966, 0, 0.7, 1, 0, -0.259, 0.966, 0, 1, 1, 0, 0, 1, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_daakl"]
_data = {
"Stand": SubResource("Animation_2a46d"),
"Walk": SubResource("Animation_j5kcp")
}

[sub_resource type="Theme" id="Theme_oiw0e"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gx2fa"]
albedo_texture = ExtResource("5_yrfkk")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rwtua"]
emission_enabled = true
emission = Color(0, 0.713726, 0.65098, 1)
emission_energy_multiplier = 9.65

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_el4ds"]
albedo_color = Color(0.976471, 0, 0.270588, 1)
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 16.0

[sub_resource type="BoxMesh" id="BoxMesh_73bbk"]

[node name="Boss" type="CharacterBody3D" groups=["enemy"]]
transform = Transform3D(1.74209, 0, 0, 0, 1.74209, 0, 0, 0, 1.74209, 0, 1.8476, 0)
script = ExtResource("1_362wq")

[node name="body" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1.19378, 0, 0, 0, 1, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_d21ya")

[node name="nose" type="MeshInstance3D" parent="body"]
unique_name_in_owner = true
transform = Transform3D(0.25, 0, 0, 0, -1.09278e-08, 0.25, 0, -0.25, -1.09278e-08, 0, 0.35, -0.5)
mesh = SubResource("PrismMesh_hljx8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.527266, 0, 0, 0, 0.558497, 0, 0, 0, 0.466907, -0.132068, 0.266129, 0)
shape = SubResource("BoxShape3D_mhx8n")

[node name="engaged" type="Timer" parent="."]
wait_time = 3.0

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true

[node name="gun" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.07, -0.75)

[node name="sight" type="RayCast3D" parent="."]
transform = Transform3D(-4.37114e-08, 4.18816, -4.37114e-08, 0, -1.8307e-07, -1, -1, -1.8307e-07, 1.91069e-15, 0, 0.435732, 0)
target_position = Vector3(0, -0.5, 0)
collision_mask = 3

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0999999, -0.8)
light_color = Color(0.870588, 0.172549, 0.278431, 1)
spot_angle = 15.0

[node name="Shoot" type="Timer" parent="."]
wait_time = 0.504
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_daakl")
}

[node name="Voice" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_r8pbr")

[node name="Boss2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Balck" type="ColorRect" parent="Boss2"]
layout_mode = 0
offset_left = 312.0
offset_top = 48.0
offset_right = 1075.0
offset_bottom = 116.0
color = Color(0.25098, 0.25098, 0.25098, 1)

[node name="Bar" type="ColorRect" parent="Boss2"]
layout_mode = 0
offset_left = 312.0
offset_top = 48.0
offset_right = 1075.0
offset_bottom = 116.0
theme = SubResource("Theme_oiw0e")
color = Color(0.25098, 0.25098, 0.776471, 1)

[node name="Label" type="Label" parent="Boss2"]
layout_mode = 0
offset_left = 588.0
offset_top = 19.0
offset_right = 785.0
offset_bottom = 166.0
theme_override_font_sizes/font_size = 80
text = "Босс"

[node name="TimerPase" type="Timer" parent="."]
wait_time = 4.521

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Legf" type="Node3D" parent="Head"]
transform = Transform3D(1, -8.74228e-08, 0, 8.74228e-08, 1, 0, 0, 0, -1, 0.00105429, -0.294722, 0)

[node name="Leg" type="MeshInstance3D" parent="Head/Legf"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.550885, -0.8038, 0)
mesh = ExtResource("2_dwrf0")
skeleton = NodePath("../../..")

[node name="Legf2" type="Node3D" parent="Head"]
transform = Transform3D(1, -8.74228e-08, 0, 8.74228e-08, 1, 0, 0, 0, -1, -0.467256, -0.294722, 0)

[node name="Leg" type="MeshInstance3D" parent="Head/Legf2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.550885, -0.8038, 0)
mesh = ExtResource("2_dwrf0")
skeleton = NodePath("../../..")

[node name="Torse" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Torse" type="MeshInstance3D" parent="Head/Torse"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, -1, 0, -1.141, 0)
mesh = ExtResource("3_6bwvd")
skeleton = NodePath("../../..")

[node name="Rig" type="Node3D" parent="Head"]
transform = Transform3D(0.941788, 0, 0.336208, -0.203607, 0.79577, 0.570346, -0.267544, -0.6056, 0.749446, -0.315978, 0.46829, 0.326964)

[node name="Rig" type="MeshInstance3D" parent="Head/Rig"]
transform = Transform3D(1, 1.49012e-08, 2.98023e-08, 0, 1, -5.96046e-08, -1.49012e-08, -2.98023e-08, -1, 0.441028, -1.58917, 5.96046e-08)
mesh = ExtResource("4_7mulb")
skeleton = NodePath("../../..")

[node name="Rig2" type="Node3D" parent="Head"]
transform = Transform3D(-0.814481, -0.477885, -0.329006, -0.48162, 0.873089, -0.0758829, -0.323515, -0.0966508, 0.941274, 0.306534, 0.46829, 0.326964)

[node name="Rig" type="MeshInstance3D" parent="Head/Rig2"]
transform = Transform3D(1, -1.86265e-08, -2.98023e-08, 2.6077e-08, 1, 0, 2.98023e-08, -7.45058e-09, -1, 0.441028, -1.58917, 1.49012e-08)
mesh = ExtResource("4_7mulb")
skeleton = NodePath("../../..")

[node name="Shootgun" type="Node3D" parent="Head/Rig2"]
transform = Transform3D(0.267544, 0.203607, 0.941788, -0.6056, 0.79577, 5.62739e-08, 0.749446, 0.570346, -0.336208, -0.188249, 0.826998, -1.7045)
visible = false

[node name="Shotgun" type="MeshInstance3D" parent="Head/Rig2/Shootgun"]
transform = Transform3D(0.0435152, -0.0488416, 0.0117625, 0.0365275, 0.0414436, 0.036954, -0.0344906, -0.01773, 0.0539766, 1.15374, -0.319983, -0.330434)
material_override = SubResource("StandardMaterial3D_gx2fa")
mesh = ExtResource("6_4kakk")
skeleton = NodePath("../../../..")

[node name="Shoot2" type="AudioStreamPlayer" parent="Head/Rig2/Shootgun"]
stream = ExtResource("7_3iyv3")

[node name="LaserGun" parent="Head/Rig2" instance=ExtResource("8_kmja4")]
transform = Transform3D(-0.151152, -0.157165, 0.483027, -0.0147725, 0.505106, 0.159726, 0.507738, -0.0320915, 0.148443, 0.52723, -0.694985, -1.07034)
visible = false

[node name="Shoot" type="AudioStreamPlayer" parent="Head/Rig2/LaserGun"]
stream = ExtResource("9_v448x")

[node name="Sword" type="Node3D" parent="Head/Rig2"]
transform = Transform3D(1, 7.45058e-09, 0, -1.86265e-08, 1, 0, 0, 0, 1, -0.402061, 0.0824464, -0.538658)

[node name="Sword" type="MeshInstance3D" parent="Head/Rig2/Sword"]
transform = Transform3D(-0.785462, -0.549068, -0.19491, -0.460858, 0.99536, -0.0582299, -0.317284, -0.0865099, 0.567094, 0.845578, -0.0235792, -0.216687)
material_override = SubResource("StandardMaterial3D_rwtua")
mesh = ExtResource("10_qdfx3")
skeleton = NodePath("../../../..")

[node name="Shoot3" type="AudioStreamPlayer" parent="Head/Rig2/Sword"]
stream = ExtResource("11_oi3dq")

[node name="Eye" type="MeshInstance3D" parent="Head"]
transform = Transform3D(0.0964502, 0, 0, 0, 0.0964502, 0, 0, 0, 0.0964502, -0.215344, 1.15134, -0.168747)
material_override = SubResource("StandardMaterial3D_el4ds")
mesh = SubResource("BoxMesh_73bbk")
skeleton = NodePath("../..")

[connection signal="timeout" from="engaged" to="." method="_on_engaged_timeout"]
[connection signal="timeout" from="Shoot" to="." method="_on_shoot_timeout"]
[connection signal="timeout" from="TimerPase" to="." method="_on_timer_pase_timeout"]
